calendly/deploy/node-demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-10-09T04:02:19Z
  generation: 2
  labels:
    app: node-demo
  name: node-demo
  namespace: default
  resourceVersion: "18433"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/node-demo
  uid: 1e3779ae-cb78-11e8-b073-42010a800016
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-demo
    spec:
      containers:
      - env:
        - name: mongohost
          valueFrom:
            configMapKeyRef:
              key: mongohost
              name: node-demo-config
        image: gcr.io/calendlyapp/node-demo:latest
        imagePullPolicy: Always
        name: node-demo
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-10-09T04:05:32Z
    lastUpdateTime: 2018-10-09T04:05:32Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
